Added jekyll-github-metadata plugin

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ repository:  scommons/scommons
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+  - jekyll-github-metadata
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
