Disabled plugins to see github metadata

--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ repository:  scommons/scommons
 # Build settings
 #markdown: kramdown
 theme: jekyll-theme-cayman
-plugins:
-  - jekyll-feed
-  - jekyll-github-metadata
+#plugins:
+#  - jekyll-feed
+#  - jekyll-github-metadata
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
