--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Scala Commons
 #description: >- # this means to ignore newlines until "baseurl:"
 #  Common Scala utilities and components.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+#baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
