Added link to the client docs

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Scala Commons
 #email: your-email@example.com
 
 description: >- # this means to ignore newlines
-  Common Scala utilities and components.
+  Common Scala/Scala.js/Reactjs utilities and components
 
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
